--- a/CSS/global.css
+++ b/CSS/global.css
@@ -8,11 +8,11 @@
 html {
     scroll-behavior: smooth;
 }
-body,
-body * {
+body {
     margin: 0;
     padding: 0;
     vertical-align: top;
     box-sizing: border-box;
     font-family: Inter;
+    text-align: center;
 }
