--- a/CSS/home.css
+++ b/CSS/home.css
@@ -3,6 +3,8 @@ h2 {
     font-size: 48px;
     line-height: 58px;
     font-weight: 600;
+    margin-bottom: 100px !important;
+    text-transform: uppercase;
 }
 p {
     font-size: 24px;
@@ -15,6 +17,7 @@ p {
     font-size: 24px;
     line-height: 29px;
     font-weight: 400;
+    text-align: left;
 }
 header > nav > a {
     font-size: 20px;
@@ -24,13 +27,14 @@ header > nav > a {
     text-decoration: none;
     color: black;
     text-decoration: underline;
+    margin-right: 50px;
 }
 /* HEADER-end  */
 
 /* HERO section start */
 .hero {
+    padding-top: 25px;
     background-image: url(../assets/hero_image.png);
-    width: 1346px;
     height: 665px;
     background-size: contain;
     background-repeat: no-repeat;
@@ -72,16 +76,50 @@ img {
     height: 279px;
 }
 .kvrm {
+    padding-top: 108px;
+    padding-bottom: 60px;
+    background-color: #f7f7f7;
 }
 /* KVMR section end */
 
 /* DUC section start */
+.duk {
+    padding-top: 60px;
+}
+.duk a {
+    font-size: 32px;
+    line-height: 39px;
+    font-weight: 400;
+    text-transform: capitalize;
+    text-decoration: none;
+    color: #fff;
+    background-color: #414141;
+    margin-right: 16px;
+    border-radius: 11px;
+    padding: 12px;
+    margin-top: 200px;
+}
+hr {
+    margin-top: 154px;
+    margin-bottom: 91px;
+}
 /* DUC section end */
 
 /* NEWSLETTER start */
+.newsletter {
+    padding-bottom: 100px;
+}
+form > input {
+    padding: 10px;
+    font-size: 20px;
+}
 /* NEWSLETTER end */
 
 /* FOOTER start */
+footer {
+    background-color: #f6f6f6;
+    padding-top: 50px;
+}
 
 .contacts {
     display: flex;
@@ -90,3 +128,15 @@ img {
     line-height: 40px;
 }
 /* FOOTER end */
+
+@media (max-width: 576px) {
+    h1 {
+        font-size: 44px;
+    }
+    h2 {
+        font-size: 30px;
+    }
+    section > nav > a {
+        font-size: 17px;
+    }
+}
